FullQa New/src/objects/GoLive_Workload__c.object
<CustomObject>
    <fields>
        <fullName>Connector__c</fullName>
        <label>Connector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant__c</fullName>
        <label>Consultant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <label>Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GoLiveID__c</fullName>
        <label>GoLiveID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GoLive_Name__c</fullName>
        <label>GoLive Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Run_Date__c</fullName>
        <label>Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Run_Time__c</fullName>
        <formula>TEXT(NOW() - CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Run Time</label>
        <type>Text</type>
    </fields>
    <label>GoLive Workload</label>
    <nameField>
        <displayFormat>Gla{0000}</displayFormat>
        <label>GoLive Workload Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GoLive Workloads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>